--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "postcss": "^8.4.13",
         "prettier": "^2.6.2",
         "prettier-plugin-tailwindcss": "^0.1.10",
+        "react-image-webp": "^0.8.0",
         "tailwindcss": "^3.0.24"
     }
 }
